# winnr-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/winnr_mcp/: __init__.py  __main__.py  client.py  config.py  errors.py  server.py
src/winnr_mcp/tools/: __init__.py  account.py  domains.py  email_users.py  export.py  inbox.py  jobs.py  warming.py
tests/: conftest.py  test_client.py  test_config.py  test_tools.py
