[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winnr-mcp"
version = "0.2.0"
description = "MCP server for the Winnr email infrastructure API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Winnr" }]
keywords = ["mcp", "winnr", "email", "warming", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
winnr-mcp = "winnr_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
